posiGen_FullsendBox/src/objects/SPE_Tax_Period__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Filed_On_Date__c</fullName>
        <label>Actual Filed On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Refund_Received_Date__c</fullName>
        <label>Actual Refund Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bridge_Loan_Ceiling_Amount__c</fullName>
        <inlineHelpText>If Bridge is constant, this is the value, otherwise it&apos;s the maximum value.</inlineHelpText>
        <label>Bridge Loan Ceiling Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bridge_Loan_Formula_Detail__c</fullName>
        <inlineHelpText>Explains how the Bridge Loan formula is calculated</inlineHelpText>
        <label>Bridge Loan Formula Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bridge_Loan_Initial_Value__c</fullName>
        <label>Bridge Loan Initial Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bridge_System_Cost_Multiplier__c</fullName>
        <inlineHelpText>This is multiplied times the System Cost to determine the bridge loan amount.</inlineHelpText>
        <label>Bridge System Cost Multiplier</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Universal_System_Lease_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If all Leases in this SPE Tax Period are the same, this is true.</description>
        <inlineHelpText>If all Leases in this SPE Tax Period are the same, this is true.</inlineHelpText>
        <label>Has Universal System Lease Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITC_Depr_System_Cost_Multiplier__c</fullName>
        <label>ITC/Depr System Cost Multiplier</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ITC_Depreciation_Formula_Explanation__c</fullName>
        <label>ITC/Depreciation Formula Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planned_File_Date__c</fullName>
        <label>Planned File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Refund_Date__c</fullName>
        <label>Projected Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPE_Funding_Traunche__c</fullName>
        <formula>TEXT(SPE__r.Funding_Traunche__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPE Funding Traunche</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPE__c</fullName>
        <label>SPE</label>
        <referenceTo>SPE__c</referenceTo>
        <relationshipName>Tax_Returns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>System_Federal_Grant_Amount__c</fullName>
        <label>System Federal Grant Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_ITC_Depreciation_Initial_Value__c</fullName>
        <label>System ITC/Depreciation Initial Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Year__c</fullName>
        <label>Tax Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Universal_Lease_Term__c</fullName>
        <label>Universal Lease Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Universal_System_Lease_Amount__c</fullName>
        <label>Universal System Lease Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>SPE Tax Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SPE__c</columns>
        <columns>SPE_Funding_Traunche__c</columns>
        <columns>Actual_Refund_Received_Date__c</columns>
        <columns>Has_Universal_System_Lease_Amount__c</columns>
        <columns>Universal_System_Lease_Amount__c</columns>
        <columns>Planned_File_Date__c</columns>
        <columns>Actual_Filed_On_Date__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SPE Tax Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPE Tax Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>